--- a/index.html
+++ b/index.html
@@ -55,43 +55,32 @@
             <div class="resp-reg-form row">
                 <div class="first-sec col-lg-6 col-sm-12">
                     <div class=rrf-heading>
-                        <h4>Enkyklios Sofia</h4>
+                        <h3>Enkyklios Sofia</h3>
                     </div>
                     <div class="rrf-desc">
-                        <p>I developed and designed a website using HTML<br>
-                            and CSS which is a responsive registration form.<br>
-                            It is a simple website for registering courses.</p>
+                        <p>Enkyklios Sofia is a non-fiction in English.<br>
+                           It is a compilation of my articles published in The Hindu InSchool edition.<br>
+                           These articles were written for the daily column named Qwikipedia.</p>
                     </div> 
                     <div class="rrf-btn">
                         <a href="https://github.com/Jickson-Sam-Paul/Spotknack.git" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Check it out!</a>
                     </div> 
                 </div> 
                     <div class="second-sec col-lg-6 col-sm-12">
-                        <img  id="opt" class=r-r-f src="images/regform.png" height="270px" width="480px">       
+                        <img  id="opt" class=r-r-f src="images/PRJCT1.jpeg" height="330px" width="350px">       
                     </div>           
             </div>
             <div class="portfolio row">
                 <div class="first-sec col-lg-6 col-sm-12">
-                    <img  id="opt" class=r-r-f src="images/port.png" height="270px" width="480px">                
+                    <img  id="opt" class=r-r-f src="images/PRJCT2.jpeg" height="330px" width="350px">                
                 </div> 
                     <div class="second-sec col-lg-6 col-sm-12">
                         <div class=port-heading>
-                            <h4>Portfolio Website</h4>
-                        </div>
-                        <div class=rrf-icons>
-                            <div class="rrf">
-                                <img src="https://cdn-icons-png.flaticon.com/512/919/919827.png" height="60px" width="60px">
-                            </div>
-                            <div class="rrf">    
-                                <img src="https://cdn-icons-png.flaticon.com/512/919/919826.png" height="60px" width="60px">
-                            </div> 
-                            <div class="rrf">    
-                                <img src="https://cdn.icon-icons.com/icons2/2415/PNG/512/bootstrap_plain_wordmark_logo_icon_146620.png" height="60px" width="60px">
-                            </div>                                      
+                            <h3>Portfolio Website</h3>
                         </div>
                         <div class="rrf-desc">
-                            <p>I developed and designed a portfolio website using HTML<br>
-                                and CSS which is a responsive portfolio website.<br>
+                            <p>My creative writings and articles in French were published<br>
+                               in the French literary magazine, Revue n°2 Littérature et animal.<br>
                             </p>
                         </div> 
                         <div class="rrf-btn">
