--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="third-page" style="min-height:100vh max-height=auto">
             <div class="projects">
                 <a name="project"></a>
-                    <div name="heading">
-                        <h2><b>Featured Projects</b></h2>
+                    <div name="heading" class="headin">
+                        <b>Featured Projects</b>
                     </div>
             <div class="resp-reg-form row">
                 <div class="first-sec col-lg-6 col-sm-12">
@@ -63,7 +63,7 @@
                            These articles were written for the daily column named Qwikipedia.</p>
                     </div> 
                     <div class="rrf-btn">
-                        <a href="https://github.com/Jickson-Sam-Paul/Spotknack.git" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Check it out!</a>
+                        <a href="https://github.com/Jickson-Sam-Paul/Spotknack.git" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" style="background-color: rgb(0, 162, 255);">Check it out!</a>
                     </div> 
                 </div> 
                     <div class="second-sec col-lg-6 col-sm-12">
@@ -84,7 +84,7 @@
                             </p>
                         </div> 
                         <div class="rrf-btn">
-                            <a href="https://github.com/Jickson-Sam-Paul/Portfolio.git" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Check it out!</a>  
+                            <a href="https://github.com/Jickson-Sam-Paul/Portfolio.git" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" style="background-color: rgb(0, 162, 255);">Check it out!</a>  
                     </div>           
             </div>
         </div>
@@ -92,7 +92,7 @@
         <div class="footer">
             <p class="click"> Contact</p>
             <div class="iconsend">     
-                <a href="mailto:jicksonsampaul@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" color="white" width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></a>
+                <a href="mailto:deliciajosephdarwin@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" color="white" width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></a>
             </div>
             <p class="ft">© Jickson Sam Paul, 2021</p>
         </div>
