--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                            These articles were written for the daily column named Qwikipedia.</p>
                     </div> 
                     <div class="rrf-btn">
-                        <a href="https://github.com/Jickson-Sam-Paul/Spotknack.git" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" style="background-color: rgb(0, 162, 255);">Check it out!</a>
+                        <a href="Les articles -Qwikipedia.pdf" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" style="background-color: rgb(0, 162, 255);">Check it out!</a>
                     </div> 
                 </div> 
                     <div class="second-sec col-lg-6 col-sm-12">
@@ -84,7 +84,7 @@
                             </p>
                         </div> 
                         <div class="rrf-btn">
-                            <a href="https://github.com/Jickson-Sam-Paul/Portfolio.git" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" style="background-color: rgb(0, 162, 255);">Check it out!</a>  
+                            <a href="https://culture.uca.fr/la-revue-1" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" style="background-color: rgb(0, 162, 255);">Check it out!</a>  
                     </div>           
             </div>
         </div>
